refactor: change about texts

--- a/tools/sloths/src/assets/locales/en.json
+++ b/tools/sloths/src/assets/locales/en.json
@@ -21,12 +21,12 @@
     "sloths": {
       "title": "About RS SLOTHS",
       "main": "All sloths in one site!",
-      "descr": "We have gathered all the sloths together for you! Now you just need to go to the catalog, select the necessary ones and download them. Any ideas, but no such sloth? Suggest! It can be a ready-made sloth, a sketch drawing or just a text description - and if the idea resonates with sloth fans, it will definitely come true!"
+      "descr": "We have gathered all the sloths together for you! Go to the catalog and see all the existing sloths! And if you want to use them somewhere, you can just select the ones you need and download it! Or you can go to the merch builder and prepare the source for something cool. Be active, but not too active. We are sloths here!"
     },
     "interactives": {
       "title": "Interactive",
       "main": "Sloths are about chilling!",
-      "descr": "We have tried to make sure that you can relax during your stay on our resource. Relax and play Memory Game, try to correctly guess all the sloths in the game of the same name, or create memes based on existing stickers: fun time, work hour! And since you've come here, don't forget to find out what kind of sloth you're today!"
+      "descr": "We have tried to make sure that you can relax during your stay on our resource. Relax and play Memory Game, try to correctly guess all the sloths in the game of the same name, or create memes based on existing stickers: fun time, work hour!"
     },
     "teammates": {
       "main": "WOV WOV Team is a team of like-minded people who strive to create something new, interesting and beautiful. We're for a businesslike attitude to humor and a humorous attitude to business!",
