fix: empty img before change

--- a/tools/sloths/src/assets/locales/en.json
+++ b/tools/sloths/src/assets/locales/en.json
@@ -150,7 +150,8 @@
     "time-": "Time ▼",
     "time+": "Time ▲",
     "createdAt-": "Creation date ▼",
-    "createdAt+": "Creation date ▲"
+    "createdAt+": "Creation date ▲",
+    "change": "Change kit"
   },
 
   "pagination": {
