--- a/tools/sloths/src/assets/locales/en.json
+++ b/tools/sloths/src/assets/locales/en.json
@@ -132,7 +132,7 @@
   "btn": {
     "close": "Close",
     "reset": "Reset filters",
-    "show": "Detail info",
+    "show": "Detailed info",
     "yes": "Yes",
     "no": "No",
     "copy": "Copy",
